Switch CI to build with Java 9 (#43)
* Switch CI to build with Java 9
* Upgrade parent POM
* Use system cacerts
* Upgrade jackson-databind due to security vulnerability
* Use non-deprecated method for creating objects